# Smoothie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Demo/: CMakeLists.txt  Demo.cpp  Demo.h  imgui.ini  main.cpp
Demo/resources/DemoScene/: Cottage_Free.geometry  Cottage_Free.smodel  Cube.sgeometry  Cube.smodel  Demo.sscene  Plane.geometry  Plane.smodel  watchtowerHigh.geometry  watchtowerHigh.smodel
Demo/resources/DemoScene/Floor/: Floor.sgeometry  Floor.smodel
Demo/resources/DemoScene/House/: House.sgeometry  House.smodel
Demo/resources/DemoScene/Reflection_ball/: Reflection_ball.sgeometry  Reflection_ball.smodel
Demo/resources/DemoScene/Tree/: Tree.sgeometry  Tree.smodel  tree2.sgeometry  tree2.smodel
Demo/shaders/: DeferredLightPass.glsl  HDRFragment.glsl  HDRVertex.glsl  SSAO.glsl  brdfIntegration.glsl  drawSkyboxFragment.glsl  drawSkyboxVertex.glsl  irradianceMapFragment.glsl  pingPongFragment.glsl  pingPongVertex.glsl  postProcessingFragment.glsl  postProcessingVertex.glsl  prefilterShaderFragment.glsl  shadowMapFragment.glsl  shadowMapVertex.glsl  skyboxFragment.glsl  skyboxVertex.glsl
Demo/shaders/blure/: ssaoblure.glsl  ssrblure.glsl
Demo/shaders/custom/: uv_test.glsl
Demo/shaders/formats/: xyznuvtb.glsl
Demo/shaders/pbr/: color_only.glsl  pbr.glsl  pbr_ao.glsl  treeItPBR.glsl
Demo/shaders/standard/: BoundBoxDraw.glsl  SSAO.glsl  SSR.glsl  brdf.glsl  hdrToCubemap.glsl  irradianceMap.glsl  pbr_render.glsl  prefilter.glsl  skybox.glsl
Exporter/: CMakeLists.txt  __init__.py  calculate_mat_indexes_test.py  chunk.py  export_script_blender.py  geometry.py  model.py  scene.py  shaders.py  textures.py
Exporter/Debug/: SmoothieExporter.exp  SmoothieExporter.lib
Exporter/src/: calculate_mat_indexes.cpp  calculate_tangent_data.cpp  calculate_uv_data.cpp  calculate_uv_data_averaged.cpp  exporter.cpp  exporter.h  write_geometry_file.cpp
SmoothieEditor/: AppContext.cpp  AppContext.h  CMakeLists.txt  imgui.ini  main.cpp
SmoothieEngine/: CMakeLists.txt
SmoothieEngine/Core/: BoundBox.cpp  BoundBox.h  Camera.cpp  Camera.h  DeferredShading.cpp  DeferredShading.h  HDR.cpp  HDR.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PostProcessing.cpp  PostProcessing.h  SSAO.cpp  SSAO.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowMaps.cpp  ShadowMaps.h  Skybox.cpp  Skybox.h  SmoothieCore.cpp  SmoothieCore.h  SmoothieDebug.cpp  SmoothieDebug.h  Texture.cpp  Texture.h  UniformBuffers.cpp  UniformBuffers.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.cpp  VertexBuffer.h
SmoothieEngine/Effects/: Atmosphere.cpp  Atmosphere.h  SSR.cpp  SSR.h
SmoothieEngine/Math/: Angles.cpp  Angles.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  SmoothieMath.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
SmoothieEngine/ResourceManager/: GeometryFile.cpp  GeometryFile.h  ParseXML.cpp  ParseXML.h  ResourceHandler.cpp  ResourceHandler.h  ShaderFile.cpp  ShaderFile.h
SmoothieEngine/SmoothieEngine.dir/Debug/: SmoothieEngine.lib.recipe
SmoothieEngine/SmoothieEngine.dir/Debug/SmoothieEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SmoothieEngine.lastbuildstate
